Minor: small radio and checkbox alignment fix

--- a/scss/bootstrap/_fixes.scss
+++ b/scss/bootstrap/_fixes.scss
@@ -45,14 +45,21 @@ div {
     margin-top: 20px;
   }
 }
+
 .optionset {
   list-style: none;
   padding-left: 0;
+  margin: 0;
   .checkbox,
   .radio {
     display: inline;
+    position: relative;
+    top: 1px;
   }
-  label {
-    padding-left: 7px;
+  .odd,
+  .even {
+    label {
+      padding-left: 7px;
+    }
   }
 }
